--- a/trunk/mscore/share/templates/instruments.xml
+++ b/trunk/mscore/share/templates/instruments.xml
@@ -2602,7 +2602,8 @@
            </channel>
         </instrument>
      <instrument>
-        <name>Snare Drum</name>
+        <name>Snare
+        Drum</name>
         <short-name>Sn. Dr.</short-name>
         <stafflines>1</stafflines>
         <clef>14</clef>
@@ -2613,6 +2614,7 @@
            <voice>0</voice>
            <name>Side Stick</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="38">
            <head>0</head>
@@ -2620,6 +2622,7 @@
            <voice>0</voice>
            <name>Acoustic Snare</name>
            <stem>2</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2637,6 +2640,7 @@
            <voice>0</voice>
            <name>Acoustic Bass Drum</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2654,6 +2658,7 @@
            <voice>0</voice>
            <name>Side Stick</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="40">
            <head>0</head>
@@ -2661,6 +2666,7 @@
            <voice>0</voice>
            <name>Snare Drum 2</name>
            <stem>2</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2678,6 +2684,7 @@
            <voice>0</voice>
            <name>Side Stick</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="38">
            <head>0</head>
@@ -2685,6 +2692,7 @@
            <voice>0</voice>
            <name>Acoustic Snare</name>
            <stem>2</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2702,6 +2710,7 @@
            <voice>0</voice>
            <name>High Tom 1</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="48">
            <head>0</head>
@@ -2709,6 +2718,7 @@
            <voice>0</voice>
            <name>High Tom 2</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2726,6 +2736,7 @@
            <voice>0</voice>
            <name>Mid Tom 1</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="45">
            <head>0</head>
@@ -2733,6 +2744,7 @@
            <voice>0</voice>
            <name>Mid Tom 2</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2750,6 +2762,7 @@
            <voice>0</voice>
            <name>Low Tom 1</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="43">
            <head>0</head>
@@ -2757,6 +2770,7 @@
            <voice>0</voice>
            <name>Low Tom 2</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2774,6 +2788,7 @@
            <voice>3</voice>
            <name>Pedal Hi-hat</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="n">
            <head>1</head>
@@ -2781,6 +2796,7 @@
            <voice>0</voice>
            <name>Ching</name>
            <stem>2</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2798,6 +2814,7 @@
            <voice>0</voice>
            <name>Low Bongo</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2815,6 +2832,7 @@
            <voice>0</voice>
            <name>High Bongo</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="61">
            <head>0</head>
@@ -2822,6 +2840,7 @@
            <voice>0</voice>
            <name>Low Bongo</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2839,6 +2858,7 @@
            <voice>0</voice>
            <name>Open High Conga</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="62">
            <head>0</head>
@@ -2846,6 +2866,7 @@
            <voice>0</voice>
            <name>Mute High Conga</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <Drum pitch="63">
            <head>0</head>
@@ -2853,6 +2874,7 @@
            <voice>0</voice>
            <name>Low Conga</name>
            <stem>1</stem>
+           <shortcut>C</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2870,6 +2892,7 @@
            <voice>0</voice>
            <name>High Timbale</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="66">
            <head>0</head>
@@ -2877,6 +2900,7 @@
            <voice>0</voice>
            <name>Low Timbale</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2894,6 +2918,7 @@
            <voice>0</voice>
            <name>Mid Tom 2</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2911,6 +2936,7 @@
            <voice>0</voice>
            <name>Mute High Conga</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="64">
            <head>0</head>
@@ -2918,6 +2944,7 @@
            <voice>0</voice>
            <name>Low Conga</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2935,6 +2962,7 @@
            <voice>0</voice>
            <name>Open Cuica</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="78">
            <head>1</head>
@@ -2942,6 +2970,7 @@
            <voice>0</voice>
            <name>Mute Cuica</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2959,6 +2988,7 @@
            <voice>0</voice>
            <name>Open Triangle</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -2976,6 +3006,7 @@
            <voice>0</voice>
            <name>Open Hi-hat</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="42">
            <head>1</head>
@@ -2983,6 +3014,7 @@
            <voice>0</voice>
            <name>Closed Hi-hat</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3000,6 +3032,7 @@
            <voice>0</voice>
            <name>Chinese Cymbal</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3017,6 +3050,7 @@
            <voice>0</voice>
            <name>Ride Bell</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3034,6 +3068,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3051,6 +3086,7 @@
            <voice>0</voice>
            <name>Vibra Slap</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3068,6 +3104,7 @@
            <voice>0</voice>
            <name>Chinese Cymbal</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3085,6 +3122,7 @@
            <voice>0</voice>
            <name>Open Triangle</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3102,6 +3140,7 @@
            <voice>0</voice>
            <name>High Agogo</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3119,6 +3158,7 @@
            <voice>0</voice>
            <name>Low Agogo</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3136,6 +3176,7 @@
            <voice>0</voice>
            <name>Low Agogo</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3153,6 +3194,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3170,6 +3212,7 @@
            <voice>0</voice>
            <name>Ride Bell</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3187,6 +3230,7 @@
            <voice>0</voice>
            <name>High Wood Block</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="77">
            <head>0</head>
@@ -3194,6 +3238,7 @@
            <voice>0</voice>
            <name>Low Wood Block</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3211,6 +3256,7 @@
            <voice>0</voice>
            <name>High Wood Block</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="77">
            <head>0</head>
@@ -3218,6 +3264,7 @@
            <voice>0</voice>
            <name>Low Wood Block</name>
            <stem>1</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3235,6 +3282,7 @@
            <voice>0</voice>
            <name>Open Triangle</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="80">
            <head>1</head>
@@ -3242,6 +3290,7 @@
            <voice>0</voice>
            <name>Mute Triangle</name>
            <stem>2</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3259,6 +3308,7 @@
            <voice>0</voice>
            <name>Crash Cymbal 2</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
          </instrument>
      <instrument>
@@ -3273,6 +3323,7 @@
            <voice>0</voice>
            <name>Ride Cymbal 1</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <Drum pitch="53">
            <head>0</head>
@@ -3280,6 +3331,7 @@
            <voice>0</voice>
            <name>Ride Bell</name>
            <stem>2</stem>
+           <shortcut>B</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3297,6 +3349,7 @@
            <voice>0</voice>
            <name>Chinese Cymbal</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3314,6 +3367,7 @@
            <voice>0</voice>
            <name>Crash Cymbal 1</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3331,6 +3385,7 @@
            <voice>0</voice>
            <name>Splash Cymbal</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3348,6 +3403,7 @@
            <voice>0</voice>
            <name>Cowbell</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3365,6 +3421,7 @@
            <voice>0</voice>
            <name>Claves</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3382,6 +3439,7 @@
            <voice>0</voice>
            <name>High Wood Block</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3399,6 +3457,7 @@
            <voice>0</voice>
            <name>Short Guiro</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3416,6 +3475,7 @@
            <voice>0</voice>
            <name>Maracas</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3433,6 +3493,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3450,6 +3511,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3467,6 +3529,7 @@
            <voice>0</voice>
            <name>Vibra Slap</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3484,6 +3547,7 @@
            <voice>0</voice>
            <name>Low Wood Block</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3501,6 +3565,7 @@
            <voice>0</voice>
            <name>High Wood Block</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3518,6 +3583,7 @@
            <voice>0</voice>
            <name>Short Guiro</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3535,6 +3601,7 @@
            <voice>0</voice>
            <name>Crash Cymbal 1</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3552,6 +3619,7 @@
            <voice>0</voice>
            <name>Maracas</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3569,6 +3637,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3586,6 +3655,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3603,6 +3673,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3620,6 +3691,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3637,6 +3709,7 @@
            <voice>0</voice>
            <name>Cabasa</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3654,6 +3727,7 @@
            <voice>0</voice>
            <name>High Agogo</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3671,6 +3745,7 @@
            <voice>0</voice>
            <name>Claves</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3688,6 +3763,7 @@
            <voice>0</voice>
            <name>Hand Clap</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3705,6 +3781,7 @@
            <voice>0</voice>
            <name>Low Tom 2</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3722,6 +3799,7 @@
            <voice>0</voice>
            <name>Bass Drum 2</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3739,6 +3817,7 @@
            <voice>0</voice>
            <name>Snare Drum 2</name>
            <stem>1</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
@@ -3756,6 +3835,7 @@
            <voice>0</voice>
            <name>Tambourine</name>
            <stem>2</stem>
+           <shortcut>A</shortcut>
            </Drum>
         <channel>
            <program>0</program>
